# llm-mom

./: .env.example  .gitignore  README.md  pyproject.toml
ai_code_notes/: 01-poll-logic.md  02-poll-logic2.md  03-compact-tests.md  04-review-fixes.md  05-testing-2.md  06-ergonomics.md  07-review.md  08-e2e-fix.md
mom/: __main__.py  cli.py  config.py  run.py
mom/lib/: llm.py  logger.py  mcp_server.py  mom.py  tmux_pane.py  tmuxctl.py
mom/tests/: conftest.py  test_assess_continue_injects_then_standby.py  test_assess_stop_pauses.py  test_idle_spin_threshold.py  test_mcp_roundtrip_tools.py  test_transcript_trimming.py  test_watcher_bash_wait.py  test_watcher_sleep_wait.py
tests/: conftest.py  test_llm.py  test_mcp_http_e2e.py  test_mom_watcher_integration.py
